# hello_kafka

./: README.md  pyproject.toml
src/: async_consumer.py  async_producer.py  consumer.py  producer.py
